--- a/css/content.css
+++ b/css/content.css
@@ -28,8 +28,10 @@ html {
 }
 
 body {
-    line-height: 3rem;
-    font-size: 2rem;
+    /* line-height: 3.5rem;
+    font-size: 2rem; */
+    line-height: 4.2rem;
+    font-size: 2.5rem;
     background-color: #c3ffe1;
     padding: 100px
 }
@@ -71,7 +73,7 @@ body {
 pre:not(.ex) {
     word-wrap: break-word;
     white-space: break-spaces;
-    font-family: sans-serif;
+    /* font-family: sans-serif; */
     width: auto
 }
 
